--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
@@ -45,7 +45,7 @@ For information on how to deploy LM on a machine outside the K8s cluster, see [L
   --docker-password=DOCKER_PASSWORD
   ```
 
-  - <image-pull-secret>: Specify the name of the Secret.
+  - `<image-pull-secret>`: Specify the name of the Secret.
   - DOCKER_REGISTRY_SERVER: Specify the address of the private repository server from which the image is pulled, for example, `reg.example-inc.com`.
   - DOCKER_USER: Image repository username.
   - DOCKER_PASSWORD: Image repository password.
