--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -12,7 +12,7 @@
   
 {{ ent.ent_begin }}
 
-- [LM has been installed and the License Key has been successfully loaded](3.0.deploy-lm.md)
+- [LM has been installed and the License Key has been successfully loaded](3.0.deploy-lm.md) (Enterprise only)
 
 {{ ent.ent_end }}
 
