--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -12,7 +12,7 @@
 
 {{ ent.ent_begin }}
 
-- [LM has been installed and the License Key has been successfully loaded](3.0.deploy-lm.md)
+- [LM has been installed and the License Key has been successfully loaded](3.0.deploy-lm.md) (Enterprise only)
 
 {{ ent.ent_end }}
 
@@ -46,7 +46,7 @@
 
   {{ent.ent_begin}}
 
-5. Create a Secret for pulling the NebulaGraph cluster image from a private repository.
+5. Create a Secret for pulling the NebulaGraph cluster image from a private repository (Enterprise only).
 
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" create secret docker-registry <image-pull-secret> \
@@ -117,7 +117,6 @@
   nebula-storaged-1   1/1     Running   0          5m34s
   nebula-storaged-2   1/1     Running   0          5m34s
   ```
-
 
 ## Scaling clusters
 
