--- a/docs-2.0/4.deployment-and-installation/6.deploy-text-based-index/1.text-based-index-restrictions.md
+++ b/docs-2.0/4.deployment-and-installation/6.deploy-text-based-index/1.text-based-index-restrictions.md
@@ -1,36 +1,41 @@
 # Full-text index restrictions
 
-    !!! caution
+This topic introduces the restrictions for full-text indexes. Please read the restrictions very carefully before using the full-text indexes.
+    
+!!! caution
 
-        - This topic introduces the restrictions for full-text indexes. Please read the restrictions very carefully before using the full-text indexes.
-        - Version 3.5.0 redoes the full-text index function, which is not compatible with the previous versions, and requires deleting the previous index data and rebuilding the index.
+    The full-text index feature has been redone in version 3.6.0 and is not compatible with previous versions. If you want to continue to use wildcards, regulars, fuzzy matches, etc., there are 3 ways to do so as follows:
 
-    For now, full-text search has the following limitations:
+    - Delete the original full-text index, rebuild the full-text index in the new way, and use the [new query syntax](../../3.ngql-guide/15.full-text-index-statements/1.search-with-text-based-index.md).
+    - Delete the original full-text index and use the [native index](../../3.ngql-guide/14.native-index-statements/README.md) and [string operators](../../3.ngql-guide/5.operators/7.string.md) directly.
+    - Continue to use the previous version of NebulaGraph and its full-text index.
 
-    * Currently, full-text search supports `LOOKUP` statements only.
+For now, full-text search has the following limitations:
 
-    * The full-text index name can contain only numbers, lowercase letters, and underscores.
+* Currently, full-text search supports `LOOKUP` statements only.
 
-    * The names of full-text indexes within different graph spaces cannot be duplicated.
+* The full-text index name can contain only numbers, lowercase letters, and underscores.
 
-    * The query returns 10 records by default. You can use the `LIMIT` clause to return more records, up to 10,000. You can modify the ElasticSearch parameters to adjust the maximum number of records returned.
+* The names of full-text indexes within different graph spaces cannot be duplicated.
 
-    * If there is a full-text index on the tag/edge type, the tag/edge type cannot be deleted or modified.
+* The query returns 10 records by default. You can use the `LIMIT` clause to return more records, up to 10,000. You can modify the ElasticSearch parameters to adjust the maximum number of records returned.
 
-    * The type of properties must be `STRING` or `FIXED_STRING`.
+* If there is a full-text index on the tag/edge type, the tag/edge type cannot be deleted or modified.
 
-    * Full-text index can not be applied to search multiple tags/edge types.
+* The type of properties must be `STRING` or `FIXED_STRING`.
 
-    * Full-text index can not search properties with value `NULL`.
+* Full-text index can not be applied to search multiple tags/edge types.
 
-    * Altering Elasticsearch indexes is not supported at this time.
+* Full-text index can not search properties with value `NULL`.
 
-    * Modifying the analyzer is not supported. You have to delete the index data and then specify the analyzer when you rebuild the index.
+* Altering Elasticsearch indexes is not supported at this time.
 
-    * `WHERE` clauses supports full-text search only working on single terms.
+* Modifying the analyzer is not supported. You have to delete the index data and then specify the analyzer when you rebuild the index.
 
-    * Make sure that you start the Elasticsearch cluster and Nebula Graph at the same time. If not, the data writing on the Elasticsearch cluster can be incomplete.
+* `WHERE` clauses supports full-text search only working on single terms.
 
-    * It may take a while for Elasticsearch to create indexes. If Nebula Graph warns no index is found, you can check the status of the indexing task.
+* Make sure that you start the Elasticsearch cluster and Nebula Graph at the same time. If not, the data writing on the Elasticsearch cluster can be incomplete.
 
-    - NebulaGraph clusters deployed with K8s do not have native support for the full-text search feature. However, you can manually deploy the feature yourself.
+* It may take a while for Elasticsearch to create indexes. If Nebula Graph warns no index is found, you can check the status of the indexing task.
+
+* NebulaGraph clusters deployed with K8s do not have native support for the full-text search feature. However, you can manually deploy the feature yourself.
