--- a/docs-2.0/4.deployment-and-installation/2.compile-and-install-nebula-graph/7.compile-using-docker.md
+++ b/docs-2.0/4.deployment-and-installation/2.compile-and-install-nebula-graph/7.compile-using-docker.md
@@ -27,19 +27,10 @@ Before you begin:
 
    Here, we use the official NebulaGraph compilation image, `ubuntu2004`. For different versions, see [nebula-dev-docker](https://github.com/vesoft-inc/nebula-dev-docker/#nebula-graph-development-docker-image).
 
-2. Create a Docker network.
-   
-  This step ensures port mapping between the container and the host.
-
-  ```bash
-  docker network create nebula-net
-  ```
-
-3. Start the compilation container.
+2. Start the compilation container.
    
   ```bash
   docker run -ti \
-    --network nebula-net \
     --security-opt seccomp=unconfined \
     -v "$PWD":/home \
     -w /home \
@@ -48,7 +39,7 @@ Before you begin:
     bash
   ```
 
-  - `--network nebula-net`: Adds the container to the `nebula-net` network.
+  - `--security-opt seccomp=unconfined`: Disables the seccomp security mechanism to avoid compilation errors.
 
   - `-v "$PWD":/home`: Mounts the local path of the NebulaGraph code to the container's `/home` directory.
 
@@ -60,30 +51,40 @@ Before you begin:
 
   - `bash`: Executes the `bash` command inside the container, entering the container's interactive terminal.
 
-
   After executing this command, you'll enter an interactive terminal inside the container. To re-enter the container, use `docker exec -ti nebula_dev bash`.
 
-4. Compile NebulaGraph inside the container.
+3. Compile NebulaGraph inside the container.
    
-  ```docker
-  # Enter the NebulaGraph source code directory
-  cd nebula
+  1. Enter the NebulaGraph source code directory.
 
-  # Create a build directory and enter it
-  mkdir build && cd build
+    ```docker
+    cd nebula
+    ```
 
-  # Use CMake to generate the Makefile.
-  cmake -DCMAKE_CXX_COMPILER=$TOOLSET_CLANG_DIR/bin/g++ -DCMAKE_C_COMPILER=$TOOLSET_CLANG_DIR/bin/gcc -DENABLE_WERROR=OFF -DCMAKE_BUILD_TYPE=Debug -DENABLE_TESTING=OFF ..
+  2. Create a build directory and enter it.
 
-  # Compile NebulaGraph. 
-  # The -j parameter specifies the number of threads to use.
-  # If you have a multi-core CPU, you can use more threads to speed up compilation.
-  make -j2
-  ```
+    ```docker
+    mkdir build && cd build
+    ```
+  
+  3. Use CMake to generate the Makefile.
+  
+    ```docker
+    cmake -DCMAKE_CXX_COMPILER=$TOOLSET_CLANG_DIR/bin/g++ -DCMAKE_C_COMPILER=$TOOLSET_CLANG_DIR/bin/gcc -DENABLE_WERROR=OFF -DCMAKE_BUILD_TYPE=Debug -DENABLE_TESTING=OFF ..
+    ```
+    For more on CMake, see [CMake Parameters](1.install-nebula-graph-by-compiling-the-source-code.md#cmake_variables).
+  
+  4. Compile NebulaGraph.
+  
+    ```docker
+    # The -j parameter specifies the number of threads to use.
+    # If you have a multi-core CPU, you can use more threads to speed up compilation.
+    make -j2
+    ```
 
-  Compilation might take some time based on your system performance. For more on CMake, see [CMake Parameters](1.install-nebula-graph-by-compiling-the-source-code.md#cmake_variables).
+    Compilation might take some time based on your system performance. 
 
-5. Install the Executables and Libraries.
+4. Install the Executables and Libraries.
 
   Post successful compilation, NebulaGraph's binaries and libraries are located in `/home/nebula/build`. Install them to `/usr/local/nebula`:
   
