index desc updates

--- a/docs-2.0/3.ngql-guide/14.native-index-statements/1.create-native-index.md
+++ b/docs-2.0/3.ngql-guide/14.native-index-statements/1.create-native-index.md
@@ -31,11 +31,8 @@ Although the same results can be obtained by using alternative indexes for queri
 !!! caution
 
     Indexes can dramatically reduce the write performance. The performance can be greatly reduced<!-- as much as 90% or even more-->. **DO NOT** use indexes in production environments unless you are fully aware of their influences on your service.
-    
-    Indexes cannot make queries faster. It can only locate a vertex or an edge according to properties or count the number of vertices or edges.
 
-    Long indexes decrease the scan performance of the Storage Service and use more memory. We suggest that you set the indexing length the same as that of the longest string to be indexed. The longest index length is 256 bytes.
-
+    Long indexes decrease the scan performance of the Storage Service and use more memory. We suggest that you set the indexing length the same as that of the longest string to be indexed. For variable-length string-type properties, the longest index length is 256 bytes; for fixed-length string-type properties, the longest index length is the length of the index itself.
 ## Steps
 
 If you must use indexes, we suggest that you:
@@ -72,7 +69,7 @@ CREATE {TAG | EDGE} INDEX [IF NOT EXISTS] <index_name> ON {<tag_name> | <edge_na
 |`IF NOT EXISTS`|Detects if the index that you want to create exists. If it does not exist, a new one will be created.|
 |`<index_name>`|The name of the index. It must be unique in a graph space. A recommended way of naming is `i_tagName_propName`. <br/>Index names cannot start with a number. They supports 1 to 4 bytes UTF-8 encoded characters, such as English letters (case-sensitive), numbers, and Chinese characters, but does not support special characters except underscores. To use special characters, reserved keywords, or starting with a number, quote them with backticks. For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md).<br/>**Note**: If you name an index in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). |
 |`<tag_name> | <edge_name>`|Specifies the name of the tag or edge associated with the index.|
-|`<prop_name_list>`|To index a **variable-length** string property, you must use `prop_name(length)` to specify the index length. To index a tag or an edge type, ignore the `prop_name_list`.|
+|`<prop_name_list>`|To index a **variable-length** string property, you must use `prop_name(length)` to specify the index length, and the maximum index length is 256. To index a tag or an edge type, ignore the `prop_name_list`.|
 |`COMMENT`|The remarks of the index. The maximum length is 256 bytes. By default, there will be no comments on an index.|
 
 ## Create tag/edge type indexes
