helm chart install updates

--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -68,7 +68,8 @@
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # Specify the version of the NebulaGraph cluster. 
       --set nebula.version=v{{nebula.release}} \  
-      # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.     
+      # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.  
+      # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.   
       --version={{operator.release}} 
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
   ```
@@ -92,11 +93,20 @@
             --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
             # Specify the version of the NebulaGraph cluster. 
             --set nebula.version=v{{nebula.release}} \  
-            # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.     
+            # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.
+            # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.     
             --version={{operator.release}} 
             --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
         ```
   {{ent.ent_end}}
+
+
+  To view all configuration parameters of the NebulaGraph cluster, run the `helm show values nebula-operator/nebula-cluster` command or click [nebula-cluster/values.yaml](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/charts/nebula-cluster/values.yaml).
+
+  Click [Chart parameters](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/doc/user/nebula_cluster_helm_guide.md#optional-chart-parameters) to see descriptions and default values of the configurable cluster parameters.
+
+  Use the `--set` argument to set configuration parameters for the cluster. For example, `--set nebula.storaged.replicas=3` will set the number of replicas for the Storage service in the cluster to 3.
+
 
 7. Check the status of the NebulaGraph cluster you created.
    
@@ -161,62 +171,6 @@ Or use variable values to delete a NebulaGraph cluster with Helm:
 ```bash
 helm uninstall nebula --namespace=nebula
 ```
-
-## Configuration parameters of the nebula-cluster Helm chart
-
-| Parameter                        | Default value                                                       | Description                                                         |
-| :-------------------------- | :----------------------------------------------------------- | ------------------------------------------------------------ |
-| `nameOverride`              | `nil`                                                        | Replaces the name of the chart in the `Chart.yaml` file.                                        |
-| `nebula.version`            | `{{nebula.tag}}`                                                     | The version of NebulaGraph.                                        |
-| `nebula.imagePullPolicy`    | `IfNotPresent`                                               | The NebulaGraph image pull policy. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). |
-| `nebula.storageClassName`   | `nil`                                                        | The StorageClass name. StorageClass is the default persistent volume type.                |
-| `nebula.schedulerName`      | `default-scheduler`                                          | The scheduler name of a NebulaGraph cluster.                                   |
-| `nebula.reference`          | `{"name": "statefulsets.apps", "version": "v1"}`             | The workload referenced for a NebulaGraph cluster.                               |
-| `nebula.graphd.image`       | `vesoft/nebula-graphd`                                       | The image name for a Graphd service. Uses the value of `nebula.version` as its version.    |
-| `nebula.graphd.replicas`    | `2`                                                          | The number of the Graphd service.                                         |
-| `nebula.graphd.env`         | `[]`                                                         | The environment variables for the Graphd service.                                       |
-| `nebula.graphd.resources`   | `{"resources":{"requests":{"cpu":"500m","memory":"500Mi"},"limits":{"cpu":"1","memory":"1Gi"}}}` | The resource configurations for the Graphd service.                                             |
-| `nebula.graphd.logStorage`  | `500Mi`                                                      | The log disk storage capacity for the Graphd service.                                     |
-| `nebula.graphd.podLabels`          | `{}`                                                         | Labels for the Graphd pod in a NebulaGraph cluster.                                  |
-| `nebula.graphd.podAnnotations`     | `{}`                                                         | Pod annotations for the Graphd pod in a NebulaGraph cluster.                                     |
-| `nebula.graphd.nodeSelector` |  `{}` |Labels for the Graphd pod to be scheduled to the specified node. |
-| `nebula.graphd.tolerations` |  `{}` |Tolerations for the Graphd pod. |
-| `nebula.graphd.affinity` |  `{}` |Affinity for the Graphd pod. |
-| `nebula.graphd.readinessProbe` |  `{}` |ReadinessProbe for the Graphd pod.|
-| `nebula.graphd.sidecarContainers` |  `{}` |Sidecar containers for the Graphd pod. |
-| `nebula.graphd.sidecarVolumes` |  `{}` |Sidecar volumes for the Graphd pod. |
-| `nebula.metad.image`        | `vesoft/nebula-metad`                                        | The image name for a Metad service. Uses the value of `nebula.version` as its version.     |
-| `nebula.metad.replicas`     | `3`                                                          | The number of the Metad service.                                          |
-| `nebula.metad.env`          | `[]`                                                         | The environment variables for the Metad service.                                        |
-| `nebula.metad.resources`    | `{"resources":{"requests":{"cpu":"500m","memory":"500Mi"},"limits":{"cpu":"1","memory":"1Gi"}}}` | The resource configurations for the Metad service.                                        |
-| `nebula.metad.logStorage` |  `500Mi` | The log disk capacity for the Metad service.                                     |
-| `nebula.metad.dataStorage` |  `1Gi` | The data disk capacity for the Metad service.                                      |
-| `nebula.metad.licenseManagerURL` | `{}` | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.**|
-| `nebula.metad.podLabels` | `{}` | Labels for the Metad pod in a NebulaGraph cluster.                                  |
-| `nebula.metad.podAnnotations` | `{}` | Pod annotations for the Metad pod in a NebulaGraph cluster.                                     |
-| `nebula.metad.nodeSelector` |  `{}` | Labels for the Metad pod to be scheduled to the specified node. |
-| `nebula.metad.tolerations` |  `{}` | Tolerations for the Metad pod. |
-| `nebula.metad.affinity` |  `{}` | Affinity for the Metad pod. |
-| `nebula.metad.readinessProbe` |  `{}` | ReadinessProbe for the Metad pod. |
-| `nebula.metad.sidecarContainers` |  `{}` | Sidecar containers for the Metad pod. |
-| `nebula.metad.sidecarVolumes` | `{}` | Sidecar volumes for the Metad pod. |
-| `nebula.storaged.image`     | `vesoft/nebula-storaged`                                     | The image name for a Storaged service. Uses the value of `nebula.version` as its version.  |
-| `nebula.storaged.replicas`  | `3`                                                          | The number of Storaged services.                                       |
-| `nebula.storaged.env`       | `[]`                                                         | The environment variables for Storaged services.                                     |
-| `nebula.storaged.resources` | `{"resources":{"requests":{"cpu":"500m","memory":"500Mi"},"limits":{"cpu":"1","memory":"1Gi"}}}` | The resource configurations for Storagedss services.                                     |
-| `nebula.storaged.logStorage` |  `500Mi` | The log disk capacity for the Metad service.                                      |
-| `nebula.storaged.dataStorage` |  `1Gi` | The data disk capacity for the Metad service.                                      |
-| `nebula.storaged.podLabels` |  `{}` | Labels for the Metad pod in a NebulaGraph cluster.                                 |
-| `nebula.storaged.podAnnotations` |`{}` | Pod annotations for the Metad pod in a NebulaGraph cluster.                                     |
-| `nebula.storaged.nodeSelector` | `{}` | Labels for the Metad pod to be scheduled to the specified node. |
-| `nebula.storaged.tolerations` |  `{}` | Tolerations for the Metad pod. |
-| `nebula.storaged.affinity` |  `{}` | Affinity for the Metad pod. |
-| `nebula.storaged.readinessProbe` |  `{}` | ReadinessProbe for the Metad pod. |
-| `nebula.storaged.sidecarContainers` |  `{}` | Sidecar containers for the Metad pod. |
-| `nebula.storaged.sidecarVolumes` | `{}` | Sidecar volumes for the Metad pod. |
-|`nebula.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
-| `imagePullSecrets`          | `[]`                                                         | The Secret to pull the NebulaGraph Enterprise cluster image.                                           |
-
 
 ## What's next
 
