--- a/docs-2.0/7.data-security/1.authentication/2.management-user.md
+++ b/docs-2.0/7.data-security/1.authentication/2.management-user.md
@@ -21,8 +21,8 @@ The `root` user with the **GOD** role can run `CREATE USER` to create a new user
   ```
 
   - `IF NOT EXISTS`: Detects if the user name exists. The user will be created only if the user name does not exist.
-  - `user_name`: Sets the name of the user.
-  - `password`: Sets the password of the user. The default password is the empty string (`''`).
+  - `user_name`: Sets the name of the user. The maximum length is 16 characters.
+  - `password`: Sets the password of the user. The default password is the empty string (`''`). The maximum length is 24 characters.
 
 {{ ent.ent_begin }}
 - Syntax with enterprise edition
