--- a/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
+++ b/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
@@ -9,7 +9,7 @@ The `FIND PATH` statement finds the paths between the selected source vertices a
 ## Syntax
 
 ```ngql
-FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
+FIND { SHORTEST | SINGLE SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
 OVER <edge_type_list> [REVERSELY | BIDIRECT] 
 [<WHERE clause>] [UPTO <N> {STEP|STEPS}] 
 YIELD path as <alias>
@@ -19,7 +19,9 @@ YIELD path as <alias>
     [vertex_id [, vertex_id] ...]
 ```
 
-- `SHORTEST` finds the shortest path.
+- `SHORTEST` finds all the shortest path.
+
+- `SINGLE SHORTEST` finds the all shortest path. If there are multiple shortest paths, only one path is returned.
 
 - `ALL` finds all the paths.
 
@@ -35,9 +37,11 @@ YIELD path as <alias>
 
 - `<WHERE clause>` filters properties of edges.
 
-- `<N>` is the maximum hop number of the path. The default value is `5`.
+- `UPTO <N> {STEP|STEPS}` is the maximum hop number of the path. The default value is `5`.
 
-- `<M>` specifies the maximum number of rows to return.
+- `ORDER BY $-.path` specifies the order of the returned paths. For information about the order rules, see [Path](https://github.com/vesoft-inc/nebula/blob/{{nebula.branch}}/src/common/datatypes/Path.h#L86).
+
+- `LIMIT <M>` specifies the maximum number of rows to return.
 
 !!! note
 
@@ -73,6 +77,35 @@ nebula> FIND SHORTEST PATH WITH PROP FROM "team204" TO "player100" OVER * REVERS
 +--------------------------------------------------------------------------------------------------------------------------------------+
 | <("team204" :team{name: "Spurs"})<-[:serve@0 {end_year: 2016, start_year: 1997}]-("player100" :player{age: 42, name: "Tim Duncan"})> |
 +--------------------------------------------------------------------------------------------------------------------------------------+
+```
+
+```ngql
+nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| p                                                                                                                                                                                              |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <("player100")<-[:follow@0 {}]-("player144")<-[:follow@0 {}]-("player133")>                                                                                                                    |
+| <("player100")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>                                                                |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                                  |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player109")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                                  |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player104")-[:serve@20182019 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                           |
+| ...                                                                                                                                                                                            |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>        |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player109")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>        |
+| ...                                                                                                                                                                                            |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+```
+
+```ngql
+nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| p                                                                                                                                                                                       |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <("player100")<-[:follow@0 {}]-("player144")<-[:follow@0 {}]-("player133")>                                                                                                             |
+| <("player100")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>                                                         |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                           |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")> |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
 
 ```ngql
