--- a/docs-2.0/7.data-security/1.authentication/4.ldap.md
+++ b/docs-2.0/7.data-security/1.authentication/4.ldap.md
@@ -106,4 +106,4 @@ Take the existing account `test2` and password `passwdtest2` on OpenLDAP as an e
 
   !!! note
 
-        After using OpenLDAP for authentication, local users (including `root`) cannot log in normally.
+        After you turn on OpenLDAP for authentication, you can log in with the account and password set in OpenLDAP. However, you need to make sure that NebulaGraph has the same username in the local account.
