--- a/docs-2.0/1.introduction/0-2.relates.md
+++ b/docs-2.0/1.introduction/0-2.relates.md
@@ -74,10 +74,7 @@ There are many technologies that are related to graphs, which can be broadly cla
 
 - Development tools: Graph query languages, modeling tools, development frameworks, and libraries.
 
-- E-books [^info] and conferences, etc.
-
-[^info]: Electronic copies are available for learning purposes by contacting [Author](mailto:min.wu@vesoft.com).
-
+- E-books and conferences, etc.
 
 <!-- TODO from VLDB 2019
 ### 分类法
