--- a/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
+++ b/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
@@ -21,7 +21,7 @@ YIELD path as <alias>
 
 - `SHORTEST` finds all the shortest path.
 
-- `SINGLE SHORTEST` finds the all shortest path. If there are multiple shortest paths, only one path is returned.
+- `SINGLE SHORTEST` finds the all shortest path. If there are multiple shortest paths, only one path is returned. The `SINGLE SHORTEST` is for Enterprise Edition only.
 
 - `ALL` finds all the paths.
 
@@ -96,6 +96,7 @@ nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player
 +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
 
+{{ent.ent_begin}}
 ```ngql
 nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
 +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -107,6 +108,11 @@ nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", 
 | <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")> |
 +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
+
+!!! enterpriseonly
+  
+    The `SINGLE SHORTEST` feature is for Enterprise Edition only.
+{{ent.ent_end}}
 
 ```ngql
 nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree is EMPTY or follow.degree >=0 YIELD path AS p;
