--- a/docs-2.0/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -71,9 +71,9 @@ NebulaGraph provides two initial configuration files for each service, `<service
 
 The configuration values in the initial configuration file are for reference only and can be adjusted according to actual needs. To use the initial configuration file, choose one of the above two files and delete the suffix `.default` or `.production` to make it valid.
 
-!!! caution
+!!! note
 
-    To ensure the availability of services, the configurations of the same service must be consistent, except for the local IP address `local_ip`. For example, three Storage servers are deployed in one NebulaGraph cluster. The configurations of the three Storage servers need to be the same, except for the IP address.
+    To ensure the availability of services, it is recommended that configurations for the same service be consistent, except for the local IP address `local_ip`. For example, three Storage servers are deployed in one NebulaGraph cluster. The configurations of the three Storage servers are recommended to be consistent, except for the IP address.
 
 The initial configuration files corresponding to each service are as follows.
 
