tag more ent content

--- a/docs-2.0/2.quick-start/1.quick-start-workflow.md
+++ b/docs-2.0/2.quick-start/1.quick-start-workflow.md
@@ -52,9 +52,9 @@ You can quickly get started with NebulaGraph by deploying NebulaGraph with Docke
     * You have started the Docker service on your host.
 
     * If you have already deployed another version of NebulaGraph with Docker Compose on your host, to avoid compatibility issues, you need to delete the `nebula-docker-compose/data` directory.
-
+      {{ent.ent_begin}}
     * For NebulaGraph Enterprise, you must have the [license key](../9.about-license/1.license-overview.md#licensing-process) loaded in [LM](../9.about-license/2.license-management-suite/3.license-manager.md).
-
+      {{ent.ent_end}}
 
     ## Deploy NebulaGraph
 
