--- a/docs-2.0/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0/20.appendix/6.eco-tool-version.md
@@ -42,6 +42,7 @@ NebulaGraph Dashboard Community Edition (Dashboard for short) is a visualization
 |:---|:---|
 | {{ nebula.tag }} | {{dashboard.tag}}|
 
+ {{ent.ent_begin}}
 ## NebulaGraph Dashboard Enterprise Edition
 
 NebulaGraph Dashboard Enterprise Edition (Dashboard for short) is a visualization tool that monitors and manages the status of machines and services in NebulaGraph cluster. For details, see [What is NebulaGraph Dashboard](../nebula-dashboard-ent/1.what-is-dashboard-ent.md).
@@ -58,6 +59,7 @@ NebulaGraph Explorer (Explorer for short) is a graph exploration visualization t
 |:---|:---|
 | {{ nebula.tag }}  | {{explorer.tag}}|
 
+  {{ent.ent_end}}
 ## NebulaGraph Stats Exporter
 
 [Nebula-stats-exporter](https://github.com/vesoft-inc/nebula-stats-exporter) exports monitor metrics to Promethus.
