--- a/docs-2.0/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -178,8 +178,7 @@ Supported options of `rocksdb_db_options` and `rocksdb_column_family_options` ar
 For more information, see [RocksDB official documentation](https://rocksdb.org/).
 
 {{ ent.ent_begin }}
-
-<!-- open after being fully tested
+<!-- open after being fully tested, enterprise only
 
 ## Storage cache configurations
 
@@ -198,7 +197,9 @@ For more information, see [RocksDB official documentation](https://rocksdb.org/)
 | `enable_negative_pool`       | `false`| Whether to add a negative pool in cache. Only valid when `enable_storage_cache` is set to `true`.  |
 | `negative_pool_capacity`     | `50`   | The negative pool size in MB. |
 | `negative_item_ttl`          | `300`  | The TTL in seconds for negative items in the cache.  | -->
+{{ ent.ent_end }}
 
+{{ ent.ent_begin }}
 ## Black Box configurations
 
 !!! enterpriseonly
