--- a/docs-2.0/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0/4.deployment-and-installation/1.resource-preparations.md
@@ -2,9 +2,12 @@
 
 This topic describes the requirements and suggestions for compiling and installing NebulaGraph, as well as how to estimate the resource you need to reserve for running a NebulaGraph cluster.
 
+{{ent.ent_begin}}
 !!! enterpriseonly
     
     In addition to installing NebulaGraph with the source code, the Dashboard Enterprise Edition tool is a better and convenient choice for installing Community and Enterprise Edition NebulaGraph. For details, see [Deploy Dashboard](../nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md).
+
+{{ent.ent_end}}
 
 ## About storage devices
 
