--- a/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
+++ b/docs-2.0/3.ngql-guide/16.subgraph-and-path/2.find-path.md
@@ -21,7 +21,7 @@ YIELD path as <alias>
 
 - `SHORTEST` finds all the shortest path.
 
-- `SINGLE SHORTEST` finds the all shortest path. If there are multiple shortest paths, only one path is returned. {{ent.ent_begin}}The `SINGLE SHORTEST` keywords are available for Enterprise Edition only.{{ent.ent_end}}
+- `SINGLE SHORTEST` finds the all shortest path. If there are multiple shortest paths, only one path is returned. {{ent.ent_begin}}The `SINGLE SHORTEST` keywords are only available in the NebulaGraph Enterprise Edition.{{ent.ent_end}}
 
 - `ALL` finds all the paths.
 
