add note for insecureskipverify

--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -64,6 +64,10 @@ sslCerts:
   insecureSkipVerify: false 
 ```
 
+!!! caution
+
+    Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
+
 When the certificates are approaching expiration, they can be automatically updated by installing [cert-manager](https://cert-manager.io/docs/installation/supported-releases/). NebulaGraph will monitor changes to the certificate directory files, and once a change is detected, it will load the new certificate content into memory. 
 
 ## Encryption strategies
