sync-sc-to-v3.6.0-ent

--- a/docs-2.0/nebula-operator/10.backup-restore-using-operator.md
+++ b/docs-2.0/nebula-operator/10.backup-restore-using-operator.md
@@ -8,9 +8,9 @@ This article introduces how to back up and restore data of the NebulaGraph clust
 
 ## Overview
 
-[NebulaGraph BR (Enterprise Edition)](../backup-and-restore/nebula-br-ent/1.br-ent-overview.md) is a command line tool for data backup and recovery of NebulaGraph enterprise edition. NebulaGraph Operator is based on the BR tool to achieve data backup and recovery for NebulaGraph clusters on Kubernetes.
+[NebulaGraph BR (Enterprise Edition), short for BR-ent](../backup-and-restore/nebula-br-ent/1.br-ent-overview.md) is a command line tool for data backup and recovery of NebulaGraph enterprise edition. NebulaGraph Operator utilizes the BR-ent tool to achieve data backup and recovery for NebulaGraph clusters on Kubernetes.
 
-When backing up data, NebulaGraph Operator creates a Job to back up the data in the NebulaGraph cluster to the specified storage service.
+When backing up data, NebulaGraph Operator creates a job to back up the data in the NebulaGraph cluster to the specified storage service.
 
 When restoring data, NebulaGraph Operator checks the specified backup NebulaGraph cluster for existence, and whether the access to remote storage is normally based on the information defined in the NebulaRestore resource object. It then creates a new cluster and restores the backup data to the new NebulaGraph cluster. For more information, see [restore flowchart](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/br_guide.md#restore-nebulagraph-cluster).
 
@@ -63,9 +63,9 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
 
 ### Full backup
 
-When backing up data to a storage service compatible with the S3 protocol, you need to create a backup Job, which will back up the full NebulaGraph data to the specified storage location.
+When backing up data to a storage service compatible with the S3 protocol, you need to create a backup job, which will back up the full NebulaGraph data to the specified storage location.
 
-Here is an example of the YAML file for a full backup Job:
+Here is an example of the YAML file for a full backup job:
 
 ```yaml
 apiVersion: batch/v1
@@ -98,7 +98,7 @@ spec:
 
 ### Incremental backup
 
-Except for the name of the Job and the command specified in `spec.template.spec.containers[0].command`, the YAML file for incremental backup is the same as that for a full backup. Here is an example of the YAML file for incremental backup:
+Except for the name of the job and the command specified in `spec.template.spec.containers[0].command`, the YAML file for incremental backup is the same as that for a full backup. Here is an example of the YAML file for incremental backup:
 
 ```yaml
 apiVersion: batch/v1
@@ -142,10 +142,9 @@ The main parameters are described as follows:
 | `spec.template.spec.containers[0].command`| - |  The command for backing up data to the storage service compatible with the S3 protocol.<br/>For descriptions of the options in the command, see [Parametr description](../backup-and-restore/nebula-br-ent/3.backup-data.md#_13). |
  
 
-For more settings of the Job, see [Kubernetes Jobs](https://kubernetes.io/docs/concepts/workloads/controllers/job/).
+For more settings of the job, see [Kubernetes Jobs](https://kubernetes.io/docs/concepts/workloads/controllers/job/).
 
-After the YAML file for the backup Job is set, run the following command to start the backup Job:
-
+After the YAML file for the backup job is set, run the following command to start the backup job:
 
 
 ```bash
@@ -154,13 +153,85 @@ kubectl apply -f <backup_file_name>.yaml
 
 When the data backup succeeds, a backup file is generated in the specified storage location. For example, the backup file name is `BACKUP_2023_02_12_10_04_16`.
 
+### Encrypted backup
+
+If you enable mTLS authentication for the NebulaGraph cluster, you need to certify the BR-ent tool to access the NebulaGraph cluster. In the YAML file for the backup job, add volumes to store the client certificate files and the CA certificate files, and mount the certificate files to the container. Then add the `--enable_ssl` and `--insecure_skip_verify` options to the command for backing up data. 
+
+!!! note
+
+    Create Secrets to store the certificate files before creating the backup job, and make sure the Secrets are in the namespace where the backup job is located. For details, see [Enable mTLS in NebulaGraph](8.custom-cluster-configurations/8.5.enable-ssl.md).
+
+The following provides an example of the YAML file for a full backup job with mTLS authentication enabled:
+
+```yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: nebula-full-backup
+spec:
+  parallelism: 1
+  ttlSecondsAfterFinished: 600
+  template:
+    spec:
+      restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: nebula-image
+      containers:
+        - image: reg.vesoft-inc.com/cloud-dev/br-ent:v3.5.1
+          imagePullPolicy: Always
+          name: backup
+          command:
+            - /bin/sh
+            - -ecx
+            - 'exec /usr/local/bin/br-ent backup full 
+            --meta META_ADDRESS:9559 
+            --storage s3://BUCKET
+            --s3.access_key ACCESS_KEY 
+            --s3.secret_key SECRET_KEY 
+            --s3.region REGION 
+            --s3.endpoint https://s3.REGION.amazonaws.com
+            --enable_ssl                                      # Enable mTLS authentication.
+            --insecure_skip_verify'                           # Skip the verification of the server's certificate chain and hostname.
+          volumeMounts:                                       # Mount the certificate files.              
+            - mountPath: /usr/local/certs/client.crt          # The path of the certificate content file. The BR-ent tool reads the file from path /usr/local/certs/<subpath>.
+              name: client-crt                                
+              subPath: client.crt                             
+            - mountPath: /usr/local/certs/client.key          # The path of the certificate private key file.
+              name: client-key
+              subPath: client.key
+            - mountPath: /usr/local/certs/ca.crt              # The path of the CA root certificate file. 
+              name: ca-crt
+              subPath: ca.crt
+      volumes:                                                # Create volumes to store the certificate files.
+        - name: client-crt                                    # The name of the volume.
+          secret:
+            defaultMode: 420
+            items:
+              - key: tls.crt                                  # The name of the certificate content in the Secret.
+                path: client.crt                              # The name of the certificate content file.
+            secretName: client-cert                           # The name of the Secret that stores the certificate file.
+        - name: client-key
+          secret:
+            defaultMode: 420
+            items:
+              - key: tls.key                                  # The name of the certificate private key in the Secret.
+                path: client.key                              # The name of the certificate private key file.
+            secretName: client-cert                           # The name of the Secret that stores the certificate file.
+        - name: ca-crt                                        # The name of the volume to store the CA root certificate file.
+          secret:
+            defaultMode: 420
+            items:
+              - key: root.crt                                 # The name of the CA certificate content in the Secret.
+                path: ca.crt                                  # The name of the CA certificate content file.
+            secretName: ca-cert                               # The name of the Secret that stores the CA certificate file.
+```
 
 ## Restore
 
 ### Notes
 
-- After the data recovery is successful, a new cluster will be created and the old cluster will not be deleted by default. You can decide whether to delete the old cluster themselves. The name of the new cluster is automatically generated by the Operator.
-- There will be a period of service unavailability during the data recovery process, so it is recommended to perform the operation during a low period of business activity.
+- After the data recovery is successful, a new cluster will be created and the old cluster will not be deleted by default. You can decide whether to delete the old cluster yourself. The name of the new cluster is automatically generated by the Operator.
+- There will be a period of service unavailability during the data recovery process, so it is recommended to operate during a low period of business activity.
 
 <!-- ### Recovery Process
 
