--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
@@ -35,7 +35,9 @@ In the YAML configuration file of the cluster instance, set `spec.logRotate` to 
 spec:
   graphd:
     config:
-      # Whether to include a timestamp in the log file name. You must set this parameter to false to enable log rotation. It is set to true by default.
+      # Whether to include a timestamp in the log file name. 
+      # You must set this parameter to false to enable log rotation. 
+      # It is set to true by default.
       "timestamp_in_logfile_name": "false"
   metad:
     config:
@@ -44,7 +46,8 @@ spec:
     config:
       "timestamp_in_logfile_name": "false"
   logRotate: # Log rotation configuration
-    # The number of times a log file is rotated before being deleted. The default value is 5, and 0 means the log file will not be rotated before being deleted.
+    # The number of times a log file is rotated before being deleted.
+    # The default value is 5, and 0 means the log file will not be rotated before being deleted.
     rotate: 5
     # The log file is rotated only if it grows larger than the specified size. The default value is 200M.
     size: "200M"
