--- a/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -134,7 +134,7 @@ For more information about audit log, see [Audit log](../2.log-management/audit-
 
 ## Experimental configurations
 
-!!! enterpriseonly
+!!! note
 
     The switch of the experimental feature is only available in the Community Edition.
 
